--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@material-ui/icons": "^4.4.1",
     "@material-ui/styles": "^4.4.1",
     "isomorphic-unfetch": "^3.0.0",
+    "libphonenumber-js": "^1.7.25",
+    "lodash": "^4.17.15",
     "next": "9.0.6",
+    "ramda": "^0.26.1",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.15"
   }
 }
