--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "@material-ui/styles": "^4.4.1",
+    "immutable": "^4.0.0-rc.12",
     "isomorphic-unfetch": "^3.0.0",
     "libphonenumber-js": "^1.7.25",
     "lodash": "^4.17.15",
