--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-redux": "^7.1.1",
+    "redux-devtools-extension": "^2.13.2",
     "react-test-renderer": "^16.9.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
