--- a/package.json
+++ b/package.json
@@ -15,18 +15,21 @@
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
     "@material-ui/styles": "^4.4.1",
+    "@zeit/next-sass": "^1.0.1",
     "immutable": "^4.0.0-rc.12",
     "isomorphic-unfetch": "^3.0.0",
     "libphonenumber-js": "^1.7.25",
     "lodash": "^4.17.15",
     "next": "9.0.6",
+    "node-sass": "^4.12.0",
     "ramda": "^0.26.1",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-redux": "^7.1.1",
-    "redux-devtools-extension": "^2.13.2",
     "react-test-renderer": "^16.9.0",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.15"
   },
